# emule-qt

./: .dockerignore  .gitignore  CMakeLists.txt  QtVersion.props  README.md  eMuleQt.pro  license-CS.txt  license-DK.txt  license-FR.txt  license-GER.txt  license-GR.txt  license-IT.txt  license-KO.txt  license-LT.txt  license-PT_BR.txt  license-ZH_TW.txt
src/core/: CMakeLists.txt  config.h.in  config_win.h  core.pro  emulecore.vcxproj  emulecore.vcxproj.filters  pch.h
src/core/app/: AppConfig.cpp  AppConfig.h  AppContext.cpp  AppContext.h  CoreSession.cpp  CoreSession.h
src/core/archive/: ArchiveReader.cpp  ArchiveReader.h  ArchiveRecovery.cpp  ArchiveRecovery.h
src/core/chat/: IrcClient.cpp  IrcClient.h  IrcMessage.h
src/core/client/: ClientCredits.cpp  ClientCredits.h  ClientList.cpp  ClientList.h  ClientStateDefs.h  ClientStructs.h  CorruptionBlackBox.cpp  CorruptionBlackBox.h  DeadSourceList.cpp  DeadSourceList.h  DownloadClient.cpp  URLClient.cpp  URLClient.h  UpDownClient.cpp  UpDownClient.h  UploadClient.cpp
src/core/crypto/: AICHData.cpp  AICHData.h  AICHHashSet.cpp  AICHHashSet.h  AICHHashTree.cpp  AICHHashTree.h  AICHSyncThread.cpp  AICHSyncThread.h  FileIdentifier.cpp  FileIdentifier.h  MD4Hash.cpp  MD4Hash.h  MD5Hash.cpp  MD5Hash.h  SHAHash.cpp  SHAHash.h
src/core/files/: AbstractFile.cpp  AbstractFile.h  CollectionFile.cpp  CollectionFile.h  KnownFile.cpp  KnownFile.h  KnownFileList.cpp  KnownFileList.h  PartFile.cpp  PartFile.h  PartFileConvert.cpp  PartFileConvert.h  PartFileWriteThread.cpp  PartFileWriteThread.h  PublishKeywordList.cpp  PublishKeywordList.h  ShareableFile.cpp  ShareableFile.h  SharedFileList.cpp  SharedFileList.h  StatisticFile.cpp  StatisticFile.h
src/core/friends/: Friend.cpp  Friend.h  FriendList.cpp  FriendList.h
src/core/ipfilter/: IPFilter.cpp  IPFilter.h
src/core/kademlia/: KadClientSearcher.h  KadContact.cpp  KadContact.h  KadDefines.h  KadEntry.cpp  KadEntry.h  KadError.h  KadFirewallTester.cpp  KadFirewallTester.h  KadIO.cpp  KadIO.h  KadIndexed.cpp  KadIndexed.h  KadLog.cpp  KadLog.h  KadLookupHistory.cpp  KadLookupHistory.h  KadMiscUtils.cpp  KadMiscUtils.h  KadPacketTracking.cpp  KadPacketTracking.h  KadPrefs.cpp  KadPrefs.h  KadRoutingBin.cpp  KadRoutingBin.h  KadRoutingZone.cpp  KadRoutingZone.h  KadSearch.cpp  KadSearch.h  KadSearchDefs.h  KadSearchManager.cpp  KadSearchManager.h  KadTypes.h  KadUDPKey.h  KadUDPListener.cpp  KadUDPListener.h  KadUInt128.cpp  KadUInt128.h  Kademlia.cpp  Kademlia.h
src/core/media/: FrameGrabThread.cpp  FrameGrabThread.h  MediaInfo.cpp  MediaInfo.h  PreviewApps.cpp  PreviewApps.h  PreviewThread.cpp  PreviewThread.h
src/core/net/: ClientReqSocket.cpp  ClientReqSocket.h  ClientUDPSocket.cpp  ClientUDPSocket.h  EMSocket.cpp  EMSocket.h  EncryptedDatagramSocket.cpp  EncryptedDatagramSocket.h  EncryptedStreamSocket.cpp  EncryptedStreamSocket.h  HttpClientReqSocket.cpp  HttpClientReqSocket.h  LastCommonRouteFinder.cpp  LastCommonRouteFinder.h  ListenSocket.cpp  ListenSocket.h  Packet.cpp  Packet.h  Pinger.cpp  Pinger.h  ServerSocket.cpp  ServerSocket.h  SmtpClient.cpp  SmtpClient.h  ThrottledSocket.h  UDPSocket.cpp  UDPSocket.h
src/core/prefs/: Preferences.cpp  Preferences.h
src/core/protocol/: ED2KLink.cpp  ED2KLink.h  Tag.cpp  Tag.h
src/core/search/: SearchExpr.cpp  SearchExpr.h  SearchExprParser.cpp  SearchExprParser.h  SearchFile.cpp  SearchFile.h  SearchList.cpp  SearchList.h  SearchParams.cpp  SearchParams.h
src/core/server/: Server.cpp  (+5 more)
src/daemon/: CMakeLists.txt  CliIpcClient.cpp  CliIpcClient.h  CommandLineExec.cpp  CommandLineExec.h  CoreNotifierBridge.cpp  CoreNotifierBridge.h  DaemonApp.cpp  DaemonApp.h  IpcClientHandler.cpp  IpcClientHandler.h  IpcServer.cpp  IpcServer.h  daemon.pro  emulecored.vcxproj  emulecored.vcxproj.filters  main.cpp
src/gui/: CMakeLists.txt  Info.plist.in  emuleqt.vcxproj  emuleqt.vcxproj.filters  gui.pro  pch.h
src/ipc/: CMakeLists.txt  CborSerializers.h  IpcConnection.cpp  IpcConnection.h  IpcMessage.cpp  IpcMessage.h  IpcProtocol.cpp  IpcProtocol.h  emuleipc.vcxproj  emuleipc.vcxproj.filters  ipc.pro
tests/: CMakeLists.txt  TestHelpers.h  tests.pro  tst_AICHHashSet.cpp  tst_AICHHashTree.cpp  tst_AbstractFile.cpp  tst_ArchiveReader.cpp  tst_ArchiveRecovery.cpp  tst_AtomicOps.cpp  tst_ClientCredits.cpp  tst_ClientList.cpp  tst_ClientStateDefs.cpp  tst_ClientUDPSocket.cpp  tst_CollectionFile.cpp  tst_CorruptionBlackBox.cpp  tst_DeadSourceList.cpp  tst_DownloadQueue.cpp  tst_ED2KLink.cpp  tst_EMSocket.cpp  tst_EncryptedDatagram.cpp  tst_FileDownloadLive.cpp  tst_FileIdentifier.cpp  tst_FrameGrabThread.cpp  tst_Friend.cpp  tst_FriendList.cpp  tst_HttpClientReqSocket.cpp  tst_IPFilter.cpp  tst_IPFilterMatch.cpp  tst_ImportParts.cpp  tst_IpcConnection.cpp  tst_IpcMessage.cpp  tst_IpcProtocol.cpp  tst_IrcClient.cpp  tst_IrcLiveConnect.cpp  tst_IrcProtocol.cpp  tst_KadContact.cpp  tst_KadEntry.cpp  tst_KadFirewallTester.cpp  tst_KadIO.cpp  tst_KadIndexed.cpp  (+72 more)
tests/data/: ipfilter_peerguardian.txt
tests/vs/: tst_AICHHashSet.vcxproj  tst_AICHHashTree.vcxproj  tst_AbstractFile.vcxproj  tst_ArchiveReader.vcxproj  tst_ArchiveRecovery.vcxproj  tst_AtomicOps.vcxproj  tst_ClientCredits.vcxproj  tst_ClientList.vcxproj  tst_ClientStateDefs.vcxproj  tst_ClientUDPSocket.vcxproj  tst_CollectionFile.vcxproj  tst_CorruptionBlackBox.vcxproj  tst_DeadSourceList.vcxproj  tst_DownloadQueue.vcxproj  tst_ED2KLink.vcxproj  tst_EMSocket.vcxproj  tst_EncryptedDatagram.vcxproj  tst_FileDownloadLive.vcxproj  tst_FileIdentifier.vcxproj  tst_FrameGrabThread.vcxproj  tst_Friend.vcxproj  tst_FriendList.vcxproj  tst_HttpClientReqSocket.vcxproj  tst_IPFilter.vcxproj  tst_IPFilterMatch.vcxproj  tst_ImportParts.vcxproj  tst_IpcConnection.vcxproj  tst_IpcMessage.vcxproj  tst_IpcProtocol.vcxproj  tst_IrcClient.vcxproj  tst_IrcLiveConnect.vcxproj  tst_IrcProtocol.vcxproj  tst_KadContact.vcxproj  tst_KadEntry.vcxproj  tst_KadFirewallTester.vcxproj  tst_KadIO.vcxproj  tst_KadIndexed.vcxproj  tst_KadLiveNetwork.vcxproj  tst_KadLookupHistory.vcxproj  tst_KadMiscUtils.vcxproj  (+69 more)
(+191 files in other folders)
